--- a/Spring_Git_Jenkins_Integration/Dockerfile
+++ b/Spring_Git_Jenkins_Integration/Dockerfile
@@ -1,3 +1,2 @@
 FROM openjdk:17-jdk-alpine
-COPY Spring_Git_Jenkins_Integration/target/Spring_Git_Jenkins_Integration-1.0.0.jar myapp-1.0.0.jar
-ENTRYPOINT ["java","-jar","myapp-1.0.0.jar"]
+ENTRYPOINT ["java","-jar","Spring_Git_Jenkins_Integration-1.0.0.jar"]
