--- a/Spring_Git_Jenkins_Integration/Dockerfile
+++ b/Spring_Git_Jenkins_Integration/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:17-jdk-alpine
-COPY target/Spring_Git_Jenkins_Integration-0.0.1.-SNAPSHOT.jar myapp-1.0.0.jar
+COPY target/Spring_Git_Jenkins_Integration-0.0.1.-SNAPSHOT.jar ./myapp-1.0.0.jar
 ENTRYPOINT ["java","-jar","myapp-1.0.0.jar"]
